fixed side z-index

--- a/src/App.css
+++ b/src/App.css
@@ -2186,6 +2186,7 @@ th {
     min-width: 100vw;
     min-height: 700px;
     display: flex;
+    background: var(--nav-bg);
 }
 .login-left {
     flex: 1;
@@ -2459,7 +2460,7 @@ th {
 @media only screen and (max-width: 993px) {
     .sidebar-container {
         position: fixed;
-        z-index: 6;
+        z-index: 10;
         left: -100%;
         height: 100vh;
         top: 0;
